Fixed contact triangle not showing bug by removing p overflow auto

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ p{
   letter-spacing: 0.05em;
   font-size: 1em;
   font-weight: normal;
-  overflow: auto;
   overflow-wrap: break-word;
 }
 
